# exif-editor

./: .gitignore  LICENCE  README.md  noxfile.py  pyproject.toml  setup.py
exif_editor/: datetime.py
src/exif_editor/: __init__.py  datetime.py
tests/: test_datetime.py
