[project]
name = "exif-editor"
version = "0.1.0"
description = "Functions for editing image Exif data."
readme = "README.md"
authors = [
    { name = "rvforest@gmail.com", email = "rvforest@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "piexif>=1.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "nox>=2025.2.9",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]
